# pw_dart

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  dart_test.yaml  ffigen.yaml  pubspec.yaml
.github/workflows/: ci.yml
example/: README.md  example.dart  pw_cli.dart  pw_dot.dart  pw_dump.dart  pw_libcamera.dart  pw_link.dart  pw_mon.dart  pw_spa_modules.dart  pw_top.dart  pw_v4l2.dart
example/graph_viewer/: README.md  pubspec.yaml
example/graph_viewer/lib/: graph_view.dart  inspector.dart  layout.dart  main.dart  theme.dart
example/graph_viewer/linux/: CMakeLists.txt
example/graph_viewer/linux/runner/: my_application.cc
example/graph_viewer/test/: fake_bridge.dart  graph_view_test.dart
hook/: build.dart
lib/: pw_dart.dart
lib/src/: client.dart  events.dart  graph.dart  version.dart
lib/src/ffi/: bindings.dart  native_bridge.dart  serialization.dart
lib/src/models/: device.dart  link.dart  models.dart  node.dart  param.dart  port.dart
src/: CMakeLists.txt  client.cpp  client.hpp  command_queue.hpp  dart_api_dl.cpp  dart_api_dl.h  event_serializer.cpp  event_serializer.hpp  link_manager.cpp  link_manager.hpp  param_handler.cpp  param_handler.hpp  pw_dart_native.cpp  pw_dart_native.h  registry_monitor.cpp  registry_monitor.hpp
test/dart/: client_test.dart  events_test.dart  graph_test.dart  mock_native_bridge.dart  models_test.dart  serialization_test.dart  version_test.dart
test/integration/: pipewire_integration_test.dart
test/native/: CMakeLists.txt  command_queue_test.cpp  event_serializer_test.cpp  link_manager_test.cpp  param_handler_test.cpp
tool/: test_native.dart
